# swerve-drive

./: build.common.gradle  build.dependencies.gradle  gradle.properties  local.properties
TeamCode/: build.gradle
TeamCode/src/main/cpp/: CMakeLists.txt  ShooterMath.cpp
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/: AnalogInputTest.java  Hardware.java  Math.java  MotorTest.java  PIDFController.java  ServoTest.java  SwerveModule.java  Test.java  Vector.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/blob/constants/: BlobConstants.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/blob/driveTrain/: Blob.java  BlobCoaieMari.java  BlobDecode.java  BlobSwerve.java  LucaSwerve.java  MuieFtc.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/blob/localization/: Odometry.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/blob/tuners/: Caca.java  LocalizationTestBlob.java  MuieFtcTest.java  StraightBackAndForthBlob.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/htech/: AutoBengos.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/htech/config/: Hardware.java  SwerveHardware.java  SwerveHardwareTest.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/htech/opModes/: AprilTagTest.java  RobotLaMisto.java  TeleOp.java  TestCrServo.java  TestMotor.java  TestMotorDublu.java  TestServo.java  TestShooter.java  TestTurelaOdometrie.java  TestTurret.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/htech/robot/: ColorSensor.java  Indexer.java  Intake.java  RobotSystems.java  RobotSystemsX2.java
(+33 files in other folders)
